--- a/MemeMe_App/Base.lproj/Main.storyboard
+++ b/MemeMe_App/Base.lproj/Main.storyboard
@@ -16,31 +16,70 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JR6-W5-9Ic">
-                                <rect key="frame" x="87" y="336" width="240" height="225"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JR6-W5-9Ic">
+                                <rect key="frame" x="20" y="77" width="374" height="736"/>
                             </imageView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gEc-2f-MMA">
-                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Top Text" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XVE-kE-9gE">
+                                <rect key="frame" x="20" y="109" width="374" height="73"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="049-Hy-NXw">
+                                <rect key="frame" x="0.0" y="33" width="414" height="44"/>
                                 <items>
-                                    <barButtonItem title="Pick" id="E8z-vq-C04">
+                                    <barButtonItem image="paperplane.fill" catalog="system" id="ZYa-d9-hU7"/>
+                                </items>
+                            </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FCc-Fy-Oq6">
+                                <rect key="frame" x="0.0" y="813" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="Library" id="ji2-nh-cQ0">
                                         <connections>
-                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="Ev3-tT-QeN"/>
+                                            <action selector="pickAnImageFromAlbum:" destination="BYZ-38-t0r" id="Be0-Sd-irh"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ybj-0r-oIw"/>
+                                    <barButtonItem title="Camera" id="lsm-Ue-B4c">
+                                        <connections>
+                                            <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="CTz-zd-7l3"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Bottom Text" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2a4-ZM-lXg">
+                                <rect key="frame" x="20" y="711" width="374" height="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gEc-2f-MMA" secondAttribute="bottom" id="9Qc-pb-T86"/>
-                            <constraint firstItem="gEc-2f-MMA" firstAttribute="top" secondItem="JR6-W5-9Ic" secondAttribute="bottom" constant="246" id="BF9-fL-0am"/>
-                            <constraint firstItem="gEc-2f-MMA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ui0-vd-20V"/>
-                            <constraint firstItem="gEc-2f-MMA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uR2-YD-kdj"/>
+                            <constraint firstItem="JR6-W5-9Ic" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="2EF-iK-Dj2"/>
+                            <constraint firstItem="JR6-W5-9Ic" firstAttribute="top" secondItem="049-Hy-NXw" secondAttribute="bottom" id="KBD-z8-fDR"/>
+                            <constraint firstItem="049-Hy-NXw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-11" id="ND0-Ab-vwG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="2a4-ZM-lXg" secondAttribute="bottom" constant="53" id="SI8-ft-HLO"/>
+                            <constraint firstItem="JR6-W5-9Ic" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Uir-mj-bEG"/>
+                            <constraint firstItem="049-Hy-NXw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dC7-2i-NYK"/>
+                            <constraint firstItem="049-Hy-NXw" firstAttribute="centerX" secondItem="JR6-W5-9Ic" secondAttribute="centerX" id="e8Y-jS-VcP"/>
+                            <constraint firstItem="JR6-W5-9Ic" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ek1-tm-cB7"/>
+                            <constraint firstItem="XVE-kE-9gE" firstAttribute="top" secondItem="049-Hy-NXw" secondAttribute="bottom" constant="32" id="fpJ-zz-21P"/>
+                            <constraint firstItem="2a4-ZM-lXg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="121" id="uC0-JH-Zby"/>
+                            <constraint firstItem="XVE-kE-9gE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="142" id="vfv-Pm-hK0"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="bottomTextField" destination="2a4-ZM-lXg" id="uF2-KS-AMy"/>
+                        <outlet property="bottomToolbar" destination="FCc-Fy-Oq6" id="8e5-12-rEc"/>
                         <outlet property="imagePickerView" destination="JR6-W5-9Ic" id="Hd4-3j-AUv"/>
+                        <outlet property="pickAnImageButton" destination="ji2-nh-cQ0" id="TWW-eT-2fl"/>
+                        <outlet property="pickAnImageFromCamera" destination="lsm-Ue-B4c" id="AXn-Bv-uYg"/>
+                        <outlet property="shareButton" destination="ZYa-d9-hU7" id="JdO-KD-nwz"/>
+                        <outlet property="topTextField" destination="XVE-kE-9gE" id="9a4-my-391"/>
+                        <outlet property="topToolbar" destination="049-Hy-NXw" id="rVl-L3-aWD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -49,6 +88,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="paperplane.fill" catalog="system" width="128" height="118"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
