--- a/MemeMe_App/Base.lproj/Main.storyboard
+++ b/MemeMe_App/Base.lproj/Main.storyboard
@@ -27,7 +27,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="049-Hy-NXw">
                                 <rect key="frame" x="0.0" y="33" width="414" height="44"/>
                                 <items>
-                                    <barButtonItem image="paperplane.fill" catalog="system" id="ZYa-d9-hU7"/>
+                                    <barButtonItem image="paperplane.fill" catalog="system" id="ZYa-d9-hU7">
+                                        <connections>
+                                            <action selector="share:" destination="BYZ-38-t0r" id="3Ow-g0-OBl"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FCc-Fy-Oq6">
