--- a/MemeMe_App/Base.lproj/Main.storyboard
+++ b/MemeMe_App/Base.lproj/Main.storyboard
@@ -27,7 +27,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="049-Hy-NXw">
                                 <rect key="frame" x="0.0" y="33" width="414" height="44"/>
                                 <items>
-                                    <barButtonItem image="paperplane.fill" catalog="system" id="ZYa-d9-hU7"/>
+                                    <barButtonItem image="paperplane.fill" catalog="system" id="ZYa-d9-hU7">
+                                        <connections>
+                                            <action selector="share" destination="BYZ-38-t0r" id="138-zN-a6D"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FCc-Fy-Oq6">
@@ -79,7 +83,6 @@
                         <outlet property="pickAnImageFromCamera" destination="lsm-Ue-B4c" id="AXn-Bv-uYg"/>
                         <outlet property="shareButton" destination="ZYa-d9-hU7" id="JdO-KD-nwz"/>
                         <outlet property="topTextField" destination="XVE-kE-9gE" id="9a4-my-391"/>
-                        <outlet property="topToolbar" destination="049-Hy-NXw" id="rVl-L3-aWD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
