--- a/MemeMe_App/Base.lproj/Main.storyboard
+++ b/MemeMe_App/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,16 +13,13 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMe_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JR6-W5-9Ic">
-                                <rect key="frame" x="20" y="87" width="374" height="726"/>
-                            </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Top Text" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XVE-kE-9gE">
-                                <rect key="frame" x="47" y="238" width="320" height="50"/>
+                                <rect key="frame" x="47" y="238" width="320" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="Jry-ui-xE1"/>
+                                    <constraint firstAttribute="height" constant="40" id="Jry-ui-xE1"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -32,9 +29,9 @@
                                 </connections>
                             </textField>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="049-Hy-NXw">
-                                <rect key="frame" x="0.0" y="33" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="-11" width="414" height="44"/>
                                 <items>
-                                    <barButtonItem image="paperplane.fill" catalog="system" id="ZYa-d9-hU7">
+                                    <barButtonItem image="square.and.arrow.up" catalog="system" id="ZYa-d9-hU7">
                                         <connections>
                                             <action selector="share" destination="BYZ-38-t0r" id="138-zN-a6D"/>
                                         </connections>
@@ -42,7 +39,7 @@
                                 </items>
                             </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCc-Fy-Oq6">
-                                <rect key="frame" x="0.0" y="1295" width="0.0" height="44"/>
+                                <rect key="frame" x="0.0" y="687" width="414" height="44"/>
                                 <items>
                                     <barButtonItem title="Library" id="ji2-nh-cQ0">
                                         <connections>
@@ -58,9 +55,9 @@
                                 </items>
                             </toolbar>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Bottom Text" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2a4-ZM-lXg">
-                                <rect key="frame" x="47" y="698" width="320" height="50"/>
+                                <rect key="frame" x="47" y="548" width="320" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="huF-oS-3NY"/>
+                                    <constraint firstAttribute="height" constant="40" id="huF-oS-3NY"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -69,11 +66,15 @@
                                     <action selector="done:" destination="dkx-z0-nzr" eventType="editingDidEnd" id="yO8-Hb-rw6"/>
                                 </connections>
                             </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JR6-W5-9Ic">
+                                <rect key="frame" x="0.0" y="43" width="414" height="626"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottomMargin" secondItem="FCc-Fy-Oq6" secondAttribute="bottom" constant="-44" id="1LA-M5-AkH"/>
+                            <constraint firstItem="XVE-kE-9gE" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="5ub-0Y-5k6"/>
                             <constraint firstItem="JR6-W5-9Ic" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6xq-N2-ycN"/>
                             <constraint firstItem="JR6-W5-9Ic" firstAttribute="top" secondItem="049-Hy-NXw" secondAttribute="bottom" constant="10" id="DCz-SK-gK5"/>
                             <constraint firstItem="JR6-W5-9Ic" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="H7T-6Q-UGc"/>
@@ -82,12 +83,17 @@
                             <constraint firstItem="XVE-kE-9gE" firstAttribute="centerX" secondItem="FCc-Fy-Oq6" secondAttribute="centerX" id="Opk-Jf-SwD"/>
                             <constraint firstItem="XVE-kE-9gE" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="238" id="Qev-BN-CMc"/>
                             <constraint firstItem="FCc-Fy-Oq6" firstAttribute="leading" secondItem="049-Hy-NXw" secondAttribute="leading" id="UJi-IX-1dK"/>
+                            <constraint firstItem="2a4-ZM-lXg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XDn-Ft-RbG"/>
                             <constraint firstItem="XVE-kE-9gE" firstAttribute="centerX" secondItem="049-Hy-NXw" secondAttribute="centerX" id="a7V-WW-yyO"/>
                             <constraint firstItem="FCc-Fy-Oq6" firstAttribute="top" secondItem="JR6-W5-9Ic" secondAttribute="bottom" id="bFN-28-IP0"/>
                             <constraint firstItem="049-Hy-NXw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dC7-2i-NYK"/>
+                            <constraint firstItem="2a4-ZM-lXg" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="e15-Mh-uU3"/>
                             <constraint firstItem="2a4-ZM-lXg" firstAttribute="centerX" secondItem="FCc-Fy-Oq6" secondAttribute="centerX" id="fjC-nK-FP5"/>
+                            <constraint firstItem="2a4-ZM-lXg" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="gV8-85-hPM"/>
+                            <constraint firstItem="2a4-ZM-lXg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h8Q-LL-W3E"/>
                             <constraint firstItem="JR6-W5-9Ic" firstAttribute="centerX" secondItem="2a4-ZM-lXg" secondAttribute="centerX" id="nSg-cp-P82"/>
                             <constraint firstItem="JR6-W5-9Ic" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="nuM-CX-UEo"/>
+                            <constraint firstItem="XVE-kE-9gE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o9z-Aq-hto"/>
                             <constraint firstItem="XVE-kE-9gE" firstAttribute="leading" secondItem="2a4-ZM-lXg" secondAttribute="leading" id="syA-y6-mUK"/>
                             <constraint firstAttribute="bottom" secondItem="2a4-ZM-lXg" secondAttribute="bottom" constant="148" id="wab-6e-eGX"/>
                         </constraints>
@@ -107,11 +113,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="123.88392857142857"/>
+            <point key="canvasLocation" x="137.68115942028987" y="123.09782608695653"/>
         </scene>
     </scenes>
     <resources>
-        <image name="paperplane.fill" catalog="system" width="128" height="118"/>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
