--- a/MemeMe_App/Base.lproj/Main.storyboard
+++ b/MemeMe_App/Base.lproj/Main.storyboard
@@ -16,29 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Top Text" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XVE-kE-9gE">
-                                <rect key="frame" x="47" y="238" width="141.33333333333334" height="40"/>
+                            <textField opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Top Text" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XVE-kE-9gE">
+                                <rect key="frame" x="136" y="88" width="142" height="40"/>
+                                <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="0.23359164812706953" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Jry-ui-xE1"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                                 <connections>
                                     <action selector="done:" destination="dkx-z0-nzr" eventType="editingDidEnd" id="VBv-GH-VO4"/>
                                     <action selector="topdone:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="63m-IH-h1A"/>
                                 </connections>
                             </textField>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="049-Hy-NXw">
-                                <rect key="frame" x="0.0" y="-11" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <barButtonItem image="square.and.arrow.up" catalog="system" id="ZYa-d9-hU7">
-                                        <connections>
-                                            <action selector="share" destination="BYZ-38-t0r" id="138-zN-a6D"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCc-Fy-Oq6">
                                 <rect key="frame" x="0.0" y="682" width="414" height="49"/>
                                 <items>
@@ -55,11 +45,12 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Bottom Text" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2a4-ZM-lXg">
-                                <rect key="frame" x="105.33333333333334" y="548" width="203.66666666666666" height="40"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Bottom Text" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2a4-ZM-lXg">
+                                <rect key="frame" x="105" y="607" width="204" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="huF-oS-3NY"/>
                                 </constraints>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -67,17 +58,40 @@
                                     <action selector="done:" destination="dkx-z0-nzr" eventType="editingDidEnd" id="yO8-Hb-rw6"/>
                                 </connections>
                             </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JR6-W5-9Ic">
-                                <rect key="frame" x="0.0" y="33" width="414" height="654"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="049-Hy-NXw">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <items>
+                                    <barButtonItem image="square.and.arrow.up" catalog="system" id="ZYa-d9-hU7">
+                                        <connections>
+                                            <action selector="share" destination="BYZ-38-t0r" id="138-zN-a6D"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JR6-W5-9Ic">
+                                <rect key="frame" x="0.0" y="44" width="414" height="638"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="049-Hy-NXw" firstAttribute="centerX" secondItem="2a4-ZM-lXg" secondAttribute="centerX" id="4TY-sd-PwA"/>
+                            <constraint firstItem="049-Hy-NXw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5EK-Ub-JZl"/>
                             <constraint firstItem="FCc-Fy-Oq6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7cN-Zo-GzJ"/>
                             <constraint firstItem="FCc-Fy-Oq6" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9dL-W8-ZIc"/>
+                            <constraint firstItem="JR6-W5-9Ic" firstAttribute="bottom" secondItem="FCc-Fy-Oq6" secondAttribute="bottom" constant="-49" id="Eqc-mL-QqM"/>
+                            <constraint firstItem="2a4-ZM-lXg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HNq-CH-Bsl"/>
+                            <constraint firstItem="XVE-kE-9gE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="136" id="HXH-NH-ZwF"/>
+                            <constraint firstItem="XVE-kE-9gE" firstAttribute="top" secondItem="049-Hy-NXw" secondAttribute="bottom" constant="44" id="UrO-29-6Il"/>
+                            <constraint firstItem="049-Hy-NXw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VJa-yR-5M7"/>
+                            <constraint firstItem="JR6-W5-9Ic" firstAttribute="top" secondItem="049-Hy-NXw" secondAttribute="bottom" id="bgS-dx-fau"/>
+                            <constraint firstItem="FCc-Fy-Oq6" firstAttribute="top" secondItem="2a4-ZM-lXg" secondAttribute="bottom" constant="35" id="cRJ-2n-rks"/>
+                            <constraint firstItem="049-Hy-NXw" firstAttribute="leading" secondItem="JR6-W5-9Ic" secondAttribute="leading" id="gjr-c3-4jd"/>
                             <constraint firstAttribute="bottom" secondItem="FCc-Fy-Oq6" secondAttribute="bottom" constant="5" id="klL-cn-ch7"/>
+                            <constraint firstItem="049-Hy-NXw" firstAttribute="trailing" secondItem="JR6-W5-9Ic" secondAttribute="trailing" id="lGm-ya-pUr"/>
+                            <constraint firstItem="XVE-kE-9gE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mxG-fw-ewE"/>
+                            <constraint firstItem="049-Hy-NXw" firstAttribute="leading" secondItem="FCc-Fy-Oq6" secondAttribute="leading" id="oT4-Az-r2E"/>
+                            <constraint firstItem="2a4-ZM-lXg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="105" id="udr-zQ-oAy"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
